Creacion del package.json y agrupacion de los archivos

--- a/css/styles.css
+++ b/css/styles.css
@@ -187,3 +187,17 @@ background-color: skyblue;
     align-items: center;
     justify-content: center;
 }
+
+#button-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+#statistic-button, #done-button {
+    display: inline-block;
+    background-color: skyblue;
+    color: black;
+    padding: 15px 30px;
+    margin-top: 20px;
+}
